--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
       </nav>
       <ul class="upline-contacts list">
         <li class="item">
-          <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="contacts link" href="mailto:info@devstudio.com">
+            <svg class="upline-contacts-icon" height="12px" width="16px">
+              <use href="./images/icons.svg#envelope"></use>
+            </svg>info@devstudio.com</a>
         </li>
         <li class="item">
-          <a class="contacts link" href="tel:380961111111">+38 096 111 11 11</a>
+          <a class="contacts link" href="tel:380961111111">
+            <svg class="upline-contacts-icon" height="16px" width="10px">
+              <use href="./images/icons.svg#smartphone"></use>
+            </svg>+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
@@ -57,18 +63,27 @@
         <h2 hidden>Особенности</h2>
         <ul class="specificsh-list list">
           <li class="item">
-            <h3 class="specificsh">Внимание к деталям</h3>
+            <svg class="specificsh-icon">
+              <use href="./images/icons.svg#antenna"></use>
+            </svg>
+            <h3 class="specificsh ">Внимание к деталям</h3>
             <p class="specifics-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li class="item">
+            <svg class="specificsh-icon">
+              <use href="./images/icons.svg#clock"></use>
+            </svg>
             <h3 class="specificsh">Пунктуальность</h3>
             <p class="specifics-text">Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.</p>
           </li>
           <li class="item">
+            <svg class="specificsh-icon">
+              <use href="./images/icons.svg#diagram"></use>
+            </svg>
             <h3 class="specificsh">Планирование</h3>
             <p class="specifics-text">
               Равным образом консультация с широким активом в значительной
@@ -76,6 +91,9 @@
             </p>
           </li>
           <li class="item">
+            <svg class="specificsh-icon">
+              <use href="./images/icons.svg#astronaut"></use>
+            </svg>
             <h3 class="specificsh">Современные технологии</h3>
             <p class="specifics-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -91,9 +109,9 @@
       <div class="container">
         <h2 class="working-kind">Чем мы занимаемся</h2>
         <ul class="working-kind-list list">
-          <li class="item"><img src="./images/box1.jpg" alt="картинка 1" width="370" /></li>
-          <li class="item"><img src="./images/box2.jpg" alt="картинка 2" width="370" /></li>
-          <li class="item"><img src="./images/box3.jpg" alt="картинка 3" width="370" /></li>
+          <li class="item"><img src="./images/working-kind/box1.jpg" alt="картинка 1" width="370" /></li>
+          <li class="item"><img src="./images/working-kind/box2.jpg" alt="картинка 2" width="370" /></li>
+          <li class="item"><img src="./images/working-kind/box3.jpg" alt="картинка 3" width="370" /></li>
         </ul>
       </div>
     </section>
@@ -103,32 +121,180 @@
         <h2 class="working">Наша команда</h2>
         <ul class="working-list list">
           <li class="item">
-            <img src="./images/id.jpg" alt="Игорь Демьяненко" width="270" />
+            <img src="./images/our-team/id.jpg" alt="Игорь Демьяненко" width="270" />
             <div class="workers">
               <h3 class="name">Игорь Демьяненко</h3>
               <p class="profession" lang="en">Product Designer</p>
+              <ul class="profession-social-list list">
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="instagram">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="twitter">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="facebook">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="linkedin">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg></a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="item">
-            <img src="./images/or.jpg" alt="Ольга Репина" width="270" />
+            <img src="./images/our-team/or.jpg" alt="Ольга Репина" width="270" />
             <div class="workers">
               <h3 class="name">Ольга Репина</h3>
               <p class="profession" lang="en">Frontend Developer</p>
+              <ul class="profession-social-list list">
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="instagram">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="twitter">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="facebook">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="linkedin">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg></a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="item">
-            <img src="./images/nt.jpg" alt="Николай Тарасов" width="270" />
+            <img src="./images/our-team/nt.jpg" alt="Николай Тарасов" width="270" />
             <div class="workers">
               <h3 class="name">Николай Тарасов</h3>
               <p class="profession" lang="en">Marketing</p>
+              <ul class="profession-social-list list">
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="instagram">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="twitter">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="facebook">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="linkedin">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg></a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="item">
-            <img src="./images/me.jpg" alt="Михаил Ермаков" width="270" />
+            <img src="./images/our-team/me.jpg" alt="Михаил Ермаков" width="270" />
             <div class="workers">
               <h3 class="name">Михаил Ермаков</h3>
               <p class="profession" lang="en">UI Designer</p>
+              <ul class="profession-social-list list">
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="instagram">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="twitter">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="facebook">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg></a>
+                </li>
+                <li class="profession-icon">
+                  <a class="profession-icon-link link" href="linkedin">
+                    <svg class="profession-social-icon" height="20px" width="20px">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg></a>
+                </li>
+              </ul>
             </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!--Постоянные клиенты-->
+    <section class="clients">
+      <div class="container">
+        <h2 class="regular-clients">Постоянные клиенты</h2>
+        <ul class="regular-clients-list list">
+          <li class="item">
+            <a class="regular-clients-icon-link link" href="group">
+              <svg class="regular-clients-logo-icon" height="60px" width="106px">
+                <use href="./images/icons.svg#group"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a class="regular-clients-icon-link link" href="group-1">
+              <svg class="regular-clients-logo-icon" height="60px" width="106px">
+                <use href="./images/icons.svg#group-1"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a class="regular-clients-icon-link link" href="group-2">
+              <svg class="regular-clients-logo-icon" height="60px" width="106px">
+                <use href="./images/icons.svg#group-2"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a class="regular-clients-icon-link link" href="group-3">
+              <svg class="regular-clients-logo-icon" height="60px" width="106px">
+                <use href="./images/icons.svg#group-3"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a class="regular-clients-icon-link link" href="group-4">
+              <svg class="regular-clients-logo-icon" height="60px" width="106px">
+                <use href="./images/icons.svg#group-4"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a class="regular-clients-icon-link link" href="group-5">
+              <svg class="regular-clients-logo-icon" height="60px" width="106px">
+                <use href="./images/icons.svg#group-5"></use>
+              </svg></a>
           </li>
         </ul>
       </div>
