--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,15 @@
       </nav>
       <ul class="upline-contacts list">
         <li class="item">
-          <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <svg class="upline-contacts-icon">
+            <use href="./images/.icons.svg#icon-envelope-hover"></use>
+          </svg>
+          <a class=" contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li class="item">
+          <svg class="upline-contacts-icon">
+            <use href="./images/.icons.svg#icon-smartphone"></use>
+          </svg>
           <a class="contacts link" href="tel:380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
