--- a/index.html
+++ b/index.html
@@ -302,19 +302,50 @@
   </main>
   <!--Подвал страницы-->
   <footer class="footer-contacts">
-    <div class="footer-contacts-outline container">
-      <a class="logo-down link" href="./index.html">Web<span class="logo-down-next">Studio</span></a>
-      <address>
-        <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="outline-address list">
-          <li class="mail">
-            <a class="contacts-down mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <div class="container footer-contacts-main">
+      <div class="footer-contacts-outline">
+        <a class="logo-down link" href="./index.html">Web<span class="logo-down-next">Studio</span></a>
+        <address>
+          <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="outline-address list">
+            <li class="mail">
+              <a class="contacts-down mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="tel">
+              <a class="contacts-down" href="tel:380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="down-social-icon">
+        <h3 class="contacts-down-social">присоединяйтесь</h3>
+        <ul class="contacts-down-social-list list">
+          <li class="contacts-down-social-icon-item">
+            <a class="contacts-down-social-icon-link link" href="instagram">
+              <svg class="contacts-down-social-icon" height="20px" width="20px">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg></a>
           </li>
-          <li class="tel">
-            <a class="contacts-down" href="tel:380961111111">+38 096 111 11 11</a>
+          <li class="contacts-down-social-icon-item">
+            <a class="contacts-down-social-icon-link link" href="instagram">
+              <svg class="contacts-down-social-icon" height="20px" width="20px">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg></a>
+          </li>
+          <li class="contacts-down-social-icon-item">
+            <a class="contacts-down-social-icon-link link" href="instagram">
+              <svg class="contacts-down-social-icon" height="20px" width="20px">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg></a>
+          </li>
+          <li class="contacts-down-social-icon-item">
+            <a class="contacts-down-social-icon-link link" href="instagram">
+              <svg class="contacts-down-social-icon" height="20px" width="20px">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg></a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
 </body>
