--- a/portfolio.html
+++ b/portfolio.html
@@ -34,16 +34,16 @@
       </nav>
       <ul class="upline-contacts list">
         <li class="item">
-          <svg class="upline-contacts-icon">
-            <use href="./images/.icons.svg#icon-envelope-hover"></use>
-          </svg>
-          <a class=" contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="contacts link" href="mailto:info@devstudio.com">
+            <svg class="upline-contacts-icon" height="12px" width="16px">
+              <use href="./images/icons.svg#envelope"></use>
+            </svg>info@devstudio.com</a>
         </li>
         <li class="item">
-          <svg class="upline-contacts-icon">
-            <use href="./images/.icons.svg#icon-smartphone"></use>
-          </svg>
-          <a class="contacts link" href="tel:380961111111">+38 096 111 11 11</a>
+          <a class="contacts link" href="tel:380961111111">
+            <svg class="upline-contacts-icon" height="16px" width="10px">
+              <use href="./images/icons.svg#smartphone"></use>
+            </svg>+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
@@ -127,19 +127,50 @@
   </main>
   <!--Подвал страницы-->
   <footer class="footer-contacts">
-    <div class="footer-contacts-outline container">
-      <a class="logo-down link" href="./index.html">Web<span class="logo-down-next">Studio</span></a>
-      <address>
-        <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="outline-address list">
-          <li class="mail">
-            <a class="contacts-down mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <div class="container footer-contacts-main">
+      <div class="footer-contacts-outline">
+        <a class="logo-down link" href="./index.html">Web<span class="logo-down-next">Studio</span></a>
+        <address>
+          <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="outline-address list">
+            <li class="mail">
+              <a class="contacts-down mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="tel">
+              <a class="contacts-down" href="tel:380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="down-social-icon">
+        <h3 class="contacts-down-social">присоединяйтесь</h3>
+        <ul class="contacts-down-social-list list">
+          <li class="contacts-down-social-icon-item">
+            <a class="contacts-down-social-icon-link link" href="instagram">
+              <svg class="contacts-down-social-icon" height="20px" width="20px">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg></a>
           </li>
-          <li class="tel">
-            <a class="contacts-down" href="tel:380961111111">+38 096 111 11 11</a>
+          <li class="contacts-down-social-icon-item">
+            <a class="contacts-down-social-icon-link link" href="instagram">
+              <svg class="contacts-down-social-icon" height="20px" width="20px">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg></a>
+          </li>
+          <li class="contacts-down-social-icon-item">
+            <a class="contacts-down-social-icon-link link" href="instagram">
+              <svg class="contacts-down-social-icon" height="20px" width="20px">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg></a>
+          </li>
+          <li class="contacts-down-social-icon-item">
+            <a class="contacts-down-social-icon-link link" href="instagram">
+              <svg class="contacts-down-social-icon" height="20px" width="20px">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg></a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
 </body>
