--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
         <h2 hidden>Особенности</h2>
         <ul class="specificsh-list list">
           <li class="item">
-            <svg class="specificsh-icon">
-              <use href="./images/icons.svg#antenna"></use>
-            </svg>
+            <div class="specificsh-icon-box">
+              <svg class="specificsh-icon">
+                <use href="./images/icons.svg#antenna"></use>
+              </svg>
+            </div>
             <h3 class="specificsh ">Внимание к деталям</h3>
             <p class="specifics-text">
               Идейные соображения, а также начало повседневной работы по
@@ -73,17 +75,21 @@
             </p>
           </li>
           <li class="item">
-            <svg class="specificsh-icon">
-              <use href="./images/icons.svg#clock"></use>
-            </svg>
+            <div class="specificsh-icon-box">
+              <svg class="specificsh-icon">
+                <use href="./images/icons.svg#clock"></use>
+              </svg>
+            </div>
             <h3 class="specificsh">Пунктуальность</h3>
             <p class="specifics-text">Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.</p>
           </li>
           <li class="item">
-            <svg class="specificsh-icon">
-              <use href="./images/icons.svg#diagram"></use>
-            </svg>
+            <div class="specificsh-icon-box">
+              <svg class="specificsh-icon">
+                <use href="./images/icons.svg#diagram"></use>
+              </svg>
+            </div>
             <h3 class="specificsh">Планирование</h3>
             <p class="specifics-text">
               Равным образом консультация с широким активом в значительной
@@ -91,9 +97,11 @@
             </p>
           </li>
           <li class="item">
-            <svg class="specificsh-icon">
-              <use href="./images/icons.svg#astronaut"></use>
-            </svg>
+            <div class="specificsh-icon-box">
+              <svg class="specificsh-icon">
+                <use href="./images/icons.svg#astronaut"></use>
+              </svg>
+            </div>
             <h3 class="specificsh">Современные технологии</h3>
             <p class="specifics-text">
               Значимость этих проблем настолько очевидна, что реализация
