--- a/portfolio.html
+++ b/portfolio.html
@@ -63,62 +63,86 @@
         </ul>
         <h2 hidden>Наші роботи</h2>
         <ul class="our-work list">
-          <li class="item"> <img src="./images/portfolio/img1.jpg" alt="Технокряк" width="370" height="294">
-            <div class="projekts">
-              <h3 class="name-images">Технокряк</h3>
-              <p class="name-kindofworks">Веб-сайт</p>
-            </div>
+          <li class="item">
+            <a class="projekts-link link" href="">
+              <img src="./images/portfolio/img1.jpg" alt="Технокряк" width="370" height="294">
+              <div class="projekts">
+                <h3 class="name-images">Технокряк</h3>
+                <p class="name-kindofworks">Веб-сайт</p>
+              </div>
+            </a>
           </li>
-          <li class="item"> <img src="./images/portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370"
-              height="294">
-            <div class="projekts">
-              <h3 class="name-images" lang="en">Постер New Orlean vs Golden Star</h3>
-              <p class="name-kindofworks">Дизайн</p>
-            </div>
+          <li class="item">
+            <a class="projekts-link link" href="">
+              <img src="./images/portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+              <div class="projekts">
+                <h3 class="name-images" lang="en">Постер New Orlean vs Golden Star</h3>
+                <p class="name-kindofworks">Дизайн</p>
+              </div>
+            </a>
           </li>
-          <li class="item"> <img src="./images/portfolio/img3.jpg" alt="Ресторан Seafood" width="370" height="294">
-            <div class="projekts">
-              <h3 class="name-images" lang="en">Ресторан Seafood</h3>
-              <p class="name-kindofworks">Приложение</p>
-            </div>
+          <li class="item">
+            <a class="projekts-link link" href="">
+              <img src="./images/portfolio/img3.jpg" alt="Ресторан Seafood" width="370" height="294">
+              <div class="projekts">
+                <h3 class="name-images" lang="en">Ресторан Seafood</h3>
+                <p class="name-kindofworks">Приложение</p>
+              </div>
+            </a>
           </li>
-          <li class="item"> <img src="./images/portfolio/img4.jpg" alt="Проект Prime" width="370" height="294">
-            <div class="projekts">
-              <h3 class="name-images" lang="en">Проект Prime</h3>
-              <p class="name-kindofworks">Маркетинг</p>
-            </div>
+          <li class="item">
+            <a class="projekts-link link" href="">
+              <img src="./images/portfolio/img4.jpg" alt="Проект Prime" width="370" height="294">
+              <div class="projekts">
+                <h3 class="name-images" lang="en">Проект Prime</h3>
+                <p class="name-kindofworks">Маркетинг</p>
+              </div>
+            </a>
           </li>
-          <li class="item"> <img src="./images/portfolio/img5.jpg" alt="Проект Boxes" width="370" height="294">
-            <div class="projekts">
-              <h3 class="name-images" lang="en">Проект Boxes</h3>
-              <p class="name-kindofworks">Приложение</p>
-            </div>
+          <li class="item">
+            <a class="projekts-link link" href="">
+              <img src="./images/portfolio/img5.jpg" alt="Проект Boxes" width="370" height="294">
+              <div class="projekts">
+                <h3 class="name-images" lang="en">Проект Boxes</h3>
+                <p class="name-kindofworks">Приложение</p>
+              </div>
+            </a>
           </li>
-          <li class="item"> <img src="./images/portfolio/img6.jpg" alt="Inspiration has no Borders" width="370"
-              height="294">
-            <div class="projekts">
-              <h3 class="name-images" lang="en">Inspiration has no Borders</h3>
-              <p class="name-kindofworks">Веб-сайт</p>
-            </div>
+          <li class="item">
+            <a class="projekts-link link" href="">
+              <img src="./images/portfolio/img6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+              <div class="projekts">
+                <h3 class="name-images" lang="en">Inspiration has no Borders</h3>
+                <p class="name-kindofworks">Веб-сайт</p>
+              </div>
+            </a>
           </li>
-          <li class="item"> <img src="./images/portfolio/img7.jpg" alt="Издание Limited Edition" width="370"
-              height="294">
-            <div class="projekts">
-              <h3 class="name-images" lang="en">Издание Limited Edition</h3>
-              <p class="name-kindofworks">Дизайн</p>
-            </div>
+          <li class="item">
+            <a class="projekts-link link" href="">
+              <img src="./images/portfolio/img7.jpg" alt="Издание Limited Edition" width="370" height="294">
+              <div class="projekts">
+                <h3 class="name-images" lang="en">Издание Limited Edition</h3>
+                <p class="name-kindofworks">Дизайн</p>
+              </div>
+            </a>
           </li>
-          <li class="item"> <img src="./images/portfolio/img8.jpg" alt="Проект LAB" width="370" height="294">
-            <div class="projekts">
-              <h3 class="name-images" lang="en">Проект LAB</h3>
-              <p class="name-kindofworks">Маркетинг</p>
-            </div>
+          <li class="item">
+            <a class="projekts-link link" href="">
+              <img src="./images/portfolio/img8.jpg" alt="Проект LAB" width="370" height="294">
+              <div class="projekts">
+                <h3 class="name-images" lang="en">Проект LAB</h3>
+                <p class="name-kindofworks">Маркетинг</p>
+              </div>
+            </a>
           </li>
-          <li class="item"> <img src="./images/portfolio/img9.jpg" alt="Growing Business" width="370" height="294">
-            <div class="projekts">
-              <h3 class="name-images" lang="en">Growing Business</h3>
-              <p class="name-kindofworks">Приложение</p>
-            </div>
+          <li class="item">
+            <a class="projekts-link link" href="">
+              <img src="./images/portfolio/img9.jpg" alt="Growing Business" width="370" height="294">
+              <div class="projekts">
+                <h3 class="name-images" lang="en">Growing Business</h3>
+                <p class="name-kindofworks">Приложение</p>
+              </div>
+            </a>
           </li>
         </ul>
       </div>
